--- a/styles/index.css
+++ b/styles/index.css
@@ -1,173 +1,180 @@
 * {
-    box-sizing: border-box;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    padding: 0;
+  box-sizing: border-box;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  padding: 0;
 }
 
-body {
-    background: #EFD8BB;
-    background: -webkit-linear-gradient(to right, #918fa3, #747458);
-    background: linear-gradient(to right, #918fa3, #747458);
+.body {
+  background: #efd8bb;
+  background: -webkit-linear-gradient(to right, #918fa3, #747458);
+  background: linear-gradient(to right, #918fa3, #747458);
 }
 
-h2 {
-    padding: 10px;
+.main__space {
+  padding: 0px 10px;
 }
-
+.main {
+  /* height: 400px; */
+  max-width: 100%;
+  width: 400px;
+  text-align: center;
+}
 .header__img {
-    height: 20px;
-    width: 20px;
-    max-width: 100%;
+  height: 20px;
+  width: 20px;
+  max-width: 100%;
 }
 
 .header {
-    align-items: center;
-    background: -webkit-linear-gradient(to right, #959595, #4d4d3b);
-    background: linear-gradient(to right, #959595, #4d4d3b);
-    border-radius: 10px 10px 0px 0px;
-    display: flex;
-    min-height: 50px;
-    padding: 10px;
+  align-items: center;
+  background: -webkit-linear-gradient(to right, #959595, #4d4d3b);
+  background: linear-gradient(to right, #959595, #4d4d3b);
+  border-radius: 10px 10px 0px 0px;
+  display: flex;
+  min-height: 50px;
+  padding: 10px;
 }
 
 .header__title {
-    color: rgb(56, 33, 33);
-    margin: 0 25px 0 10px;
+  color: rgb(56, 33, 33);
+}
+
+.header_space {
+  padding: 0px 10px;
 }
 
 .main__title {
-    align-items: center;
-    background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
-    background: linear-gradient(to right, #D4D3DD, #EFEFBB);
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
+  align-items: center;
+  background: -webkit-linear-gradient(to right, #d4d3dd, #efefbb);
+  background: linear-gradient(to right, #d4d3dd, #efefbb);
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .main__img {
-    height: 400px;
-    max-width: 100%;
-    width: 400px;
+  height: 400px;
+  max-width: 100%;
+  width: 400px;
 }
 
 .main__content {
-    background: -webkit-linear-gradient(to right, #e9e983, #c3c0df);
-    background: linear-gradient(to right, #e9e983, #c3c0df);
-    border-radius: 0px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    padding: 2%;
+  background: -webkit-linear-gradient(to right, #e9e983, #c3c0df);
+  background: linear-gradient(to right, #e9e983, #c3c0df);
+  border-radius: 0px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  padding: 2%;
 }
 
 .main__card-info {
-    background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
-    background: linear-gradient(to right, #D4D3DD, #EFEFBB);
-    border-radius: 20px;
-    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
-    display: flex;
-    flex-flow: column wrap;
-    justify-content: space-between;
-    margin: 10px;
-    padding: 50px;
-    width: 400px;
+  background: -webkit-linear-gradient(to right, #d4d3dd, #efefbb);
+  background: linear-gradient(to right, #d4d3dd, #efefbb);
+  border-radius: 20px;
+  box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: space-between;
+  padding: 50px;
+  width: 400px;
 }
 
 .main__card-item {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .main__card-title {
-    font-size: 20px;
-    line-height: 0px;
+  font-size: 18px;
+  line-height: 0px;
 }
 
 .main__card-value {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    line-height: 0px;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", "Segoe UI", Tahoma,
+    Geneva, Verdana, sans-serif;
+  font-size: 20px;
+  line-height: 0px;
 }
 
 .footer__content {
-    align-items: center;
-    background: -webkit-linear-gradient(to right, #D4D3DD, #EFEFBB);
-    background: linear-gradient(to right, #D4D3DD, #EFEFBB);
-    border-radius: 0px 0px 10px 10px;
-    display: flex;
-    padding: 0% 5% 1% 10%;
+  align-items: center;
+  background: -webkit-linear-gradient(to right, #d4d3dd, #efefbb);
+  background: linear-gradient(to right, #d4d3dd, #efefbb);
+  border-radius: 0px 0px 10px 10px;
+  display: flex;
+  padding: 0% 5% 1% 10%;
 }
 
 .footer__content-img {
-    display: contents;
+  display: contents;
 }
 
 .footer__img {
-    background: -webkit-linear-gradient(to right, #e9e983, #c3c0df);
-    background: linear-gradient(to right, #e9e983, #c3c0df);
-    border-radius: 10%;
-    height: 100px;
-    margin: auto;
-    margin-top: 20px;
-    width: 100px;
+  background: -webkit-linear-gradient(to right, #e9e983, #c3c0df);
+  background: linear-gradient(to right, #e9e983, #c3c0df);
+  border-radius: 10%;
+  height: 100px;
+  margin: auto;
+  margin-top: 20px;
+  width: 100px;
 }
 
-footer img:hover {
-    background: -webkit-linear-gradient(to right, #bdbd7d, #bdbd7d);
-    background: linear-gradient(to right, #bdbd7d, #bdbd7d);
-    cursor: pointer;
+.footer__img:hover {
+  background: -webkit-linear-gradient(to right, #bdbd7d, #bdbd7d);
+  background: linear-gradient(to right, #bdbd7d, #bdbd7d);
+  cursor: pointer;
 }
-
 
 @media only screen and (max-device-width: 600px) {
-    .header {
-        justify-content: center;
-    }
+  .header {
+    justify-content: center;
+  }
 
-    .footer__content {
-        flex-flow: column wrap;
-    }
+  .footer__content {
+    flex-flow: column wrap;
+  }
 
-    .footer__content-img {
-        display: flex;
-        column-gap: 10%;
-    }
+  .footer__content-img {
+    display: flex;
+    column-gap: 10%;
+  }
 
-    .main__img {
-        height: 300px;
-        max-width: 100%;
-        width: 300px;
-    }
+  .main__img {
+    height: 300px;
+    max-width: 100%;
+    width: 300px;
+  }
 
-    .footer__content {
-        padding: 0% 13% 1% 10%;
-    }
+  .footer__content {
+    padding: 0% 13% 5% 10%;
+  }
 
-    .footer__img {
-        height: 80px;
-        width: 80px;
-    }
+  .footer__img {
+    height: 80px;
+    width: 80px;
+  }
 
-    .footer___title {
-        margin-top: 6%;
-    }
+  .footer___title {
+    margin-top: 6%;
+  }
 }
 
-@media only screen and (max-device-width: 870px) {
-    .main__card-item {
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: space-between;
-    }
+@media only screen and (max-device-width: 849px) {
+  .main__card-item {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+  }
 
-    .main__card-item2 {
-        display: flex;
-        justify-content: space-between;
-    }
+  .main__card-item2 {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .main__img {
-        margin-bottom: -80px;
-        position: relative;
-        z-index: 1;
-    }
+  .main__img {
+    margin-bottom: -80px;
+    position: relative;
+    z-index: 1;
+  }
 }
